[package]
name = "scratch-rs"
description = "scratch-rs"
version = "0.1.0"
edition = "2024"
authors = ["Bradley Reynolds <bradley.reynolds@tailstory.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shenanigansd/scratchpad/"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
