[project]
name = "bradworks"
version = "0.7.0"
description = "An ERP designed for manufacturing written in Python."
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
requires-python = ">=3.10,"
dependencies = [
    "gunicorn>=20.1.0",
    "flask>=2.0.1",
    "flask-Login @ git+https://github.com/maxcountryman/flask-login@main",
    "wtforms>=2.3.3",
    "flask-wtf>=0.15.1",
    "wtforms-sqlalchemy>=0.3",
    "flask-log-request-id>=0.10.1",
    "msal>=1.12.0",
    "msgraph-core>=0.2.2",
    "azure-identity>=1.6.1",
    "bcrypt>=3.2.0",
    "flask-jwt-extended>=4.3.1",
    "authlib>=0.15.5",
    "psycopg2>=2.9.1",
    "sqlalchemy>=1.4.23",
    "marshmallow>=3.12.2",
    "marshmallow-sqlalchemy>=0.26.1",
    "requests>=2.25.1",
    "reportlab>=3.5.68",
    "python-barcode>=0.13.1",
    "darbiadev-labels>=0.2.0",
    "darbiadev-shipping[fedex,ups,usps]>=0.4.0",
    "darbiadev-sanmar>=0.5.0",
    "darbiadev-businesscentral>=0.4.0",
    "pendulum>=2.1.2",
    "pytz>=2021.3",
    "azure-storage-blob>=12.8.1",
    "email-validator>=1.1.3",
    "markdown>=3.3.6",
    "pydantic>=1.9.0",
    "humanize>=4.0.0",
]

[project.urls]
homepage = "https://github.com/darbiadev/bradworks"
repository = "https://github.com/darbiadev/bradworks"
documentation = "https://probable-system-8d2a1f7c.pages.github.io/"

[project.optional-dependencies]

[tool.pdm]
includes = [
    "bradworks/",
]
excludes = [
    "tests/"
]

[tool.pdm.dev-dependencies]
dev = [
    "pip-licenses>=3.5.3",
    "taskipy>=1.9.0",
    "pre-commit>=2.16.0",
    "pylint>=2.12.2",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "black>=21.12b0",
    "isort>=5.10.1",
    "pyright>=0.0.13",
]
tests = [
    "pytest>=6.2.5",
]
docs = [
    "sphinx>=4.3.2",
    "sphinxcontrib-autoprogram>=0.1.7",
    "sphinx-rtd-theme>=1.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.taskipy.tasks]
precommit = "pre-commit install"
lint = "pre-commit run --all-files"
test-nocov = "pytest"
test = "pytest --cov-report= --cov --ff"
retest = "pytest --cov-report= --cov --lf"
html = "coverage html"
report = "coverage report"

[tool.sphinx]
copyright = "Darbia"
author = "Bradley Reynolds"
api_dir = "bradworks"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = "R0401, R0801, E1101"  # ""C0114, C0115, C0116, R0401, R0801"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules bradworks"

[tool.pyright]
reportGeneralTypeIssues = false
