[package]
name = "aoc-2023-05"
description = "aoc-2023-05"
version = "0.1.0"
edition = "2024"
authors = ["Bradley Reynolds <bradley.reynolds@tailstory.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shenanigansd/scratchpad/"
keywords = ["AoC"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
